Bug 89331 - [HSW]igt/kms_universal_plane/universal-plane-pipe-A-functional fail
Summary: [HSW]igt/kms_universal_plane/universal-plane-pipe-A-functional fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: maria guadalupe
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-26 02:57 UTC by Ding Heng
Modified: 2017-07-11 16:14 UTC (History)
2 users (show)

See Also:
i915 platform: HSW
i915 features: display/Other


Attachments
dmesg (123.76 KB, text/plain)
2015-02-26 02:57 UTC, Ding Heng
no flags Details
dmesg.log (83.77 KB, text/plain)
2017-03-28 19:43 UTC, maria guadalupe
no flags Details

Description Ding Heng 2015-02-26 02:57:45 UTC
Created attachment 113832 [details]
dmesg

==System Environment==
--------------------------
Regression: No, this is a new bug
 

Non-working platforms: HSW

==kernel==
--------------------------
origin/drm-intel-nightly: 0b2a1076c5cb4f383d6a8c940ffab1e27f241097(2015-02-15)

==Bug detailed description==
root@x-hsw25:/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests# ./kms_universal_plane --run-subtest universal-plane-pipe-A-functional
IGT-Version: 1.9-g26f4081 (x86_64) (Linux: 4.0.0-rc1_drm-intel-nightly_0b2a10_20150225+ x86_64)
Testing connector HDMI-A-2 using pipe A
(kms_universal_plane:5069) CRITICAL: Test assertion failure function functional_test_pipe, file kms_universal_plane.c:270:
(kms_universal_plane:5069) CRITICAL: Failed assertion: igt_crc_equal(&test.crc_1, &test.crc_5)
Subtest universal-plane-pipe-A-functional failed.
Log Start
(kms_universal_plane:5069) DEBUG: Test requirement passed: !(pipe >= display->n_pipes)
(kms_universal_plane:5069) INFO: Testing connector HDMI-A-2 using pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: set_pipe(A)
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0, size=0
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=1, pitch=7680)
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0, size=0
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=2, pitch=7680)
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=1920, height=1080, format=0x34325258 [bpp=32], tiling=0, size=0
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=3, pitch=7680)
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(width=100, height=100, format=0x34325258 [bpp=32], tiling=0, size=0
(kms_universal_plane:5069) igt-fb-DEBUG: igt_create_fb_with_bo_size(handle=4, pitch=448)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_position(100,100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(59)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 59, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 66, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(68)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 68, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.0, fb 66, position (0, 0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane pipe A, plane 0, disabling
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.0, fb 66, position (0, 0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(68)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 68, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane pipe A, plane 1, disabling
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, disabling
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(68)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.0, fb 68, position (0, 0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(59)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.0, fb 59, position (0, 0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.0, fb 66, position (0, 0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane pipe A, plane 0, disabling
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(68)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 68, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 66, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(0)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane pipe A, plane 0, disabling
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.0: plane_set_fb(66)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: A.1: plane_set_fb(69)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: commit {
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: Selecting pipe A
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetCrtc pipe A, fb 66, panning (0, 0), mode 1920x1080
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG:
(kms_universal_plane:5069) igt-kms-DEBUG: HDMI-A-2: SetPlane A.1, fb 69, position (100, 100)
(kms_universal_plane:5069) igt-kms-DEBUG: display:
(kms_universal_plane:5069) igt-kms-DEBUG: }
(kms_universal_plane:5069) CRITICAL: Test assertion failure function functional_test_pipe, file kms_universal_plane.c:270:
(kms_universal_plane:5069) CRITICAL: Failed assertion: igt_crc_equal(&test.crc_1, &test.crc_5)
Log End
Subtest universal-plane-pipe-A-functional: FAIL (1.522s)

==Reproduce steps==
---------------------------- 
1. ./kms_universal_plane --run-subtest universal-plane-pipe-A-functional
Comment 1 Kevin Strasser 2015-10-09 19:25:07 UTC
The particular assert that is failing here is "Disabling primary plane should be same as black primary". I've slowed the test down and can confirm that a black primary plane is considerably brighter than a disabled one. Nothing in ironlake_update_primary_plane jumps out at me as obviously wrong. I'm going to try to confirm that the fb that is used in the black primary plane case actually consists of all black pixels.
Comment 2 Jani Nikula 2016-12-28 12:45:00 UTC
Old bug, still an issue?
Comment 3 Ricardo 2017-02-24 15:15:27 UTC
Lupita could you retest this and let us know the results

if the test passes please close the bug
if the test fails please update bug with current logs and place the bug in reopen state
Comment 4 maria guadalupe 2017-03-28 19:42:15 UTC
this issue still happen over HSW whit the next configuration:

==Reproduce steps==
---------------------------- 
./kms_universal_plane --run-subtest universal-plane-pipe-A-functional

 Software
======================================
kernel version            : 4.10.2-mainline-ww12-version-4.10.2
architecture              : x86_64
os version                : Ubuntu 16.10
os codename               : yakkety
kernel driver             : i915
bios revision             : 4.6
bios release date         : 03/02/2017

======================================
        Graphic drivers
======================================
modesetting               : modesetting_drv.so
xorg-xserver              : 1.18.4
libdrm                    : 2.4.75
vaapi (intel-driver)      : Intel i965 driver for Intel(R) Haswell Mobile - 1.8.           0.pre1 (1.8.0.pre1)
cairo                     : 1.15.4
xserver                   : X.Org X Server 1.19.2
intel-gpu-tools (tag)     : intel-gpu-tools-1.18
intel-gpu-tools (commit)  : bb97a05

======================================
             Hardware
======================================
platform                  : HSW-Nuc
motherboard id            : D54250WYK
form factor               : Desktop
cpu family                : Core i5
cpu family id             : 6
cpu information           : Intel(R) Core(TM) i5-4250U CPU @ 1.30GHz
gpu card                  : Intel Corporation Haswell-ULT Integrated Graphics Co           ntroller (rev 09) (prog-if 00 [VGA controller])
max memory ram            : 16 GB
xdpyinfo:  unable to open display ":0".
cpu thread                : 4
cpu core                  : 2
cpu model                 : 69
cpu stepping              : 1
socket                    : Socket LGA1150
signature                 : Type 0, Family 6, Model 69, Stepping 1
hard drive                : 223GiB (240GB)

attach 
================================
dmesg.log
Comment 5 maria guadalupe 2017-03-28 19:43:00 UTC
Created attachment 130514 [details]
dmesg.log
Comment 6 Ricardo 2017-03-28 20:13:13 UTC
change to reopen since information has now been provided
Comment 7 Jari Tahvanainen 2017-07-03 09:54:18 UTC
Marking as resolved+Fixed since test has been pass on 4.12.0-rc2-drm-tip-ww21-commit-028a0b3+ (HSW-1-D54250WYK).
Fix has been introduced in after 4.10.0-rc7-drm-intel-testing-qa-ww16-commit-a4b2d83, where test was still fail.
Comment 8 Jari Tahvanainen 2017-07-03 09:55:04 UTC
Marking verified+fixed based on the comment 7.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.